<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.savesmart.ui.auth.LoginFragment"
        android:label="@string/login_title">

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />

    </fragment>

    <!-- Register Fragment -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.savesmart.ui.auth.RegisterFragment"
        android:label="@string/register_title" />

    <!-- Dashboard Fragment -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.savesmart.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title" />

</navigation>

